[gd_scene load_steps=12 format=3 uid="uid://v46qx2ee7t2u"]

[ext_resource type="Texture2D" uid="uid://bks54efejpc71" path="res://Images/Pickups/Coin5.png" id="1_mtl3v"]
[ext_resource type="Script" path="res://Scenes/UI.gd" id="1_qc831"]
[ext_resource type="Texture2D" uid="uid://ci28grkwo75u3" path="res://Images/Pickups/Fuel.png" id="1_x0u3y"]
[ext_resource type="FontFile" uid="uid://bug6qli1adqyb" path="res://fredoka-one.one-regular.ttf" id="2_kp8ku"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d1gt6"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 7.0
expand_margin_top = 7.0
expand_margin_right = 7.0
expand_margin_bottom = 7.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v6uq7"]
bg_color = Color(0.482353, 0.811765, 0.290196, 1)
border_width_top = 6
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="FontVariation" id="FontVariation_bpnl4"]
base_font = ExtResource("2_kp8ku")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pfrhm"]
bg_color = Color(0.6, 0.6, 0.6, 0.6)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r5qlw"]
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d1gko"]
bg_color = Color(0.552941, 0.803922, 0.682353, 1)
border_width_top = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hsgdf"]
bg_color = Color(0.552941, 0.803922, 0.682353, 1)
border_width_top = 5
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_qc831")

[node name="Fuel" type="TextureRect" parent="."]
offset_left = -2.0
offset_top = -1.0
offset_right = 198.0
offset_bottom = 199.0
texture = ExtResource("1_x0u3y")

[node name="ProgressBar" type="ProgressBar" parent="Fuel"]
layout_mode = 0
offset_left = 199.0
offset_top = 54.0
offset_right = 774.0
offset_bottom = 168.0
theme_override_styles/background = SubResource("StyleBoxFlat_d1gt6")
theme_override_styles/fill = SubResource("StyleBoxFlat_v6uq7")
value = 50.0
show_percentage = false

[node name="Coin" type="TextureRect" parent="."]
offset_left = -2.0
offset_top = 188.0
offset_right = 198.0
offset_bottom = 388.0
texture = ExtResource("1_mtl3v")

[node name="Label" type="Label" parent="Coin"]
layout_mode = 0
offset_left = 200.0
offset_top = 29.0
offset_right = 524.0
offset_bottom = 175.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = SubResource("FontVariation_bpnl4")
theme_override_font_sizes/font_size = 120
text = "0"

[node name="Button" type="Button" parent="."]
offset_left = 1079.0
offset_top = 58.0
offset_right = 1341.0
offset_bottom = 169.0
theme_override_fonts/font = ExtResource("2_kp8ku")
theme_override_font_sizes/font_size = 68
theme_override_styles/normal = SubResource("StyleBoxFlat_pfrhm")
theme_override_styles/hover = SubResource("StyleBoxFlat_r5qlw")
text = "Menu"

[node name="Menu" type="Node2D" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Menu"]
offset_left = 225.0
offset_top = 176.0
offset_right = 1199.0
offset_bottom = 663.0
color = Color(1, 1, 1, 0.647059)

[node name="Resume" type="Button" parent="Menu"]
offset_left = 509.0
offset_top = 256.0
offset_right = 880.0
offset_bottom = 380.0
theme_override_fonts/font = ExtResource("2_kp8ku")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_d1gko")
theme_override_styles/hover = SubResource("StyleBoxFlat_hsgdf")
text = "Resume"

[node name="Restart" type="Button" parent="Menu"]
offset_left = 508.0
offset_top = 443.0
offset_right = 879.0
offset_bottom = 567.0
theme_override_fonts/font = ExtResource("2_kp8ku")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_d1gko")
theme_override_styles/hover = SubResource("StyleBoxFlat_hsgdf")
text = "Restart"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Menu/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Menu/Restart" to="." method="_on_restart_pressed"]
